# essential-launcher

./: .gitignore  .gitmodules  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: manifest.rs
manifest/: Cargo.toml  example-modpack.json
manifest/src/: lib.rs
