[package]
name = "manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "readme"
# path = "src/bin/readme.rs"

# [lib]
# name = "manifest"
# path = "src/lib.rs"

[dependencies]
argh = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
